--- a/photosite.html
+++ b/photosite.html
@@ -3,6 +3,9 @@
 
 <head>
     <title>Photo Blog</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="photos.css">
 </head>
 
 <body>
